<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/image_6">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:layout_marginBottom="580dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="390dp"
        android:gravity="center"
        android:text="@string/continent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country1"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country2"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country3"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country4"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country5"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/country6"
            android:textColor="@color/black"
            android:background="@color/white"
            android:alpha="0.85"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="692dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_name"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/untitled_design__5__1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="470dp"
        android:contentDescription="@null"/>


</android.support.constraint.ConstraintLayout>